[project]
name = "tubthumper"
description = "Python package of retry utilities named after the English anarcho-communist rock band Chumbawamba's 1997 hit Tubthumping"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache License, Version 2.0"}
keywords = ["retry", "jitter", "exponential-backoff"]
authors = [{ name = "Matt Fay", email = "matt.e.fay@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "typing-extensions; python_version < '3.10'",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://tubthumper.mattefay.com"
Changelog = "https://tubthumper.mattefay.com/en/stable/changelog.html"
Source = "https://github.com/matteosox/tubthumper"
"Bug Report" = "https://github.com/matteosox/tubthumper/issues/new/choose"
"Feature Request" = "https://github.com/matteosox/tubthumper/issues/new/choose"

[dependency-groups]
dev = [
    "check-wheel-contents>=0.6.1",
    "coverage>=7.6.10",
    "furo>=2024.8.6",
    "mock>=5.1.0",
    "myst-parser>=3.0.1",
    "packaging>=24.2",
    "pygithub>=2.5.0",
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "ruff>=0.8.5",
    "sphinx>=7.4.7",
    "sphinx-copybutton>=0.5.2",
    "sphinx-notfound-page>=1.0.4",
    "sphinxext-opengraph>=0.9.1",
    "twine>=6.0.1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.hooks.vcs]
version-file = "src/tubthumper/_version.py"

[tool.ruff.lint]
extend-select = ["I", "PL", "RUF"]
ignore = ["PLR0913", "PLR2004"]

[tool.pyright]
include = [
    "src",
    "test/unit_tests",
    "docs",
    "scripts",
]
reportUnnecessaryTypeIgnoreComment = true
reportMissingParameterType = true
reportUnknownLambdaType = true

[tool.pytest.ini_options]
addopts = "-ra --verbose --color=yes"

[tool.coverage.run]
branch = true
parallel = true
source = ["tubthumper"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_also = [
    # Typing-related
    "if TYPE_CHECKING:",
    "@overload",
]

[tool.check-wheel-contents]
toplevel = "tubthumper"
package = "src/tubthumper"
