[metadata]
name = tubthumper
version = file: tubthumper/VERSION
author = Matt Fay
author_email = matt.e.fay@gmail.com
description = Python package of retry utilities named after the English anarcho-communist rock band Chumbawamba's 1997 hit Tubthumping
download_url = https://pypi.python.org/pypi/tubthumper
keywords = retry, jitter, exponential-backoff
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_file = LICENSE
platforms = any
project_urls =
    Documentation = https://tubthumper.mattefay.com
    Changelog = https://tubthumper.mattefay.com/en/stable/changelog.html
    Source Code = https://github.com/matteosox/tubthumper
    Bug Tracker = https://github.com/matteosox/tubthumper/issues
url = https://tubthumper.mattefay.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
install_requires =
    typing-extensions; python_version<"3.8"
    dataclasses; python_version<"3.7"
packages = find:
python_requires = >=3.6
zip_safe = True

[options.package_data]
tubthumper =
    py.typed
    VERSION
